Fixes leaves (z-index in progress)

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,8 +1,5 @@
-#canvas {
-  z-index: 1000;
-  border:1px solid #000000;
-}
 #tree {
+  z-index: 5;
   position: absolute;
   left: 0;
   right: 0;
